<resources>
    <string name="app_name">Rehapp</string>
    <string name="home_page">Home Page</string>
    <string name="rehapp">RehApp</string>
    <string name="avanti">Avanti</string>
    <string name="raccontaci_di_te_stesso">Raccontaci di te stesso</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="togglebutton1">ToggleButton1</string>
    <string name="quanti_anni_hai">Quanti anni hai ?</string>
    <string name="inserisci_la_tua_et">Inserisci la tua età</string>
    <string name="quando_sei_nato">Quando sei nato ?</string>
    <string name="data_di_nascita">Data di nascita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uomo">Uomo</string>
    <string name="donna">Donna</string>
    <string name="inizia1">inizia</string>
    <string name="log_in">Log in</string>
    <string name="non_hai_un_account">Non hai un account?</string>
    <string name="registrati">Registrati</string>
    <string name="sono_una_donna">Sono una donna</string>
    <string name="sono_un_uomo">Sono un uomo</string>
    <string name="accedi1">Accedi</string>
    <string name="nome_utente">Nome utente</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="la_prima_volta_qui">È la prima volta qui?</string>
    <string name="secondo_fragment">Secondo Fragment</string>
    <string name="vai">vai</string>
    <string name="continua">Continua</string>
    <string name="il_tuo_nome">Il tuo nome</string>
    <string name="nome">nome</string>
    <string name="il_tuo_cognome">Il tuo cognome</string>
    <string name="inserisci_il_tuo_edss">Inserisci il tuo EDSS</string>
    <string name="scala_dello_stato_di_disabilit_espansa">Scala dello stato di disabilità espansa</string>
    <string name="expanded_disability_status_scale">Expanded Disability Status Scale</string>
    <string name="edssExp">L\'EDSS è la scala di stato di disabilità espansa. Questo è un valore che deve essere stabilito dal proprio meidco curante.</string>
    <string name="crea_il_tuo_account">Crea il tuo account</string>
    <string name="la_tue_et">La tue età</string>
    <string name="la_tua_email">La tua email</string>
    <string name="la_tua_password">La tua password</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="il_tuo_username">Il tuo username</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_report">Report</string>
    <string name="menu_notify">Promemoria</string>
    <string name="hello_home_fragment">Hello home</string>
    <string name="notify">Notify</string>
    <string name="hello_report_fragment">Report</string>
    <string name="settings">Impostazioni</string>
    <string name="profile">Profilo</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="EDSS">Grado EDSS</string>

    <!-- Messages Preferences -->
    <string name="signature_name">Nome</string>
    <string name="signature_surname">Cognome</string>

    <!-- Sync Preferences -->
    <string name="notifications">Abilita le notifiche</string>
    <string name="info_personali">Informazioni personali</string>
    <string name="log_out">Logout</string>
    <string name="setup_app">Impostazioni app</string>
    <string name="info_app">Informazioni app</string>
    <string name="dimensione_testo">Dimensione testo</string>
    <string name="version">Versione</string>
    <string name="addAct">Aggiungi attività</string>
    <string name="addAct2">Aggiungi riabilitazione</string>
    <string name="aggiungi">Aggiungi</string>
    
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="email">Email</string>
    <string name="titolo_attività">Titolo attività</string>
    <string name="durata_attività">Durata attivtà (hh:mm)</string>
    <string name="data">Data</string>
    <string name="tipologia_attività">Tipologia attività</string>
    <string name="channel_name">Notifiche</string>
    <string name="channel_description">Canale notifiche</string>
    <string name="username">Username</string>
    <string name="titolo_notifica">Titolo</string>
    <string name="ora_notifica">Orario</string>
    <string name="valore">Valore</string>
    <string name="chiudi">Chiudi</string>
    <string name="nome4">Nome</string>
    <string name="cognome4">Cognome</string>
    <string name="dati_personali">Dati personali</string>
    <string name="credenziali_per_accedere">Credenziali per accedere</string>
    <string name="qual_il_tuo_edss">Qual\'è il tuo EDSS ?</string>
    <string name="categoria_attività">Categoria attività</string>
    <string name="nessun_promemoria_impostato">Nessun promemoria impostato</string>
    <string name="no_activity">Nessuna attività registrata</string>
    <string name="Attività">ATTIVITA\'</string>
    <string name="Tempo">MINUTI</string>
    <string name="forza1">- 5 minuti riscaldamento</string>
    <string name="forza2">- 1 minuto riposo</string>
    <string name="forza3">  Attività 1 + 1 min recupero</string>
    <string name="forza4">  Attività 2 + 1 min recupero</string>
    <string name="forza5">  Attività 3 + 1 min recupero</string>
    <string name="forza6">  Attività 4 + 1 min recupero</string>
    <string name="forza7">  Attività 5 + 1 min recupero</string>
    <string name="forza8">  Attività 6 + 1 min recupero</string>
    <string name="forza9">- 5 minuti stretching</string>
    <string name="Resume">RIPRENDI</string>
    <string name="Pause">PAUSA</string>
    <string name="fatto">FATTO</string>
    <string name="stop">STOP</string>
    <string name="save">SALVA</string>
    <string name="delete">ELIMINA</string>
    <string name="endu8">- 5 minuti cooldown</string>
    <string name="endu7">- 1 minuto riposo</string>
    <string name="endu3">Almeno 20 minuti di attività a scelta tra le seguenti:</string>
    <string name="endu3H">Un\'attività a scelta tra le seguenti:</string>
    <string name="endu7h">~  Armoergometro</string>
    <string name="endu8h">Eseguire l\'attività in 6 ripetizioni da 3 minuti con 1 minuto di recupero</string>
    <string name="endu4h">~  Uscita in carrozzina</string>
    <string name="endu4">~  Camminata</string>
    <string name="endu5">~  Cyclette</string>
    <string name="endu6">~  Salita scale</string>
    <string name="endu6h">~  Arm walk simulato</string>
    <string name="saveText">Salva l\'allenamento effettuato</string>
    <string name="deleteText">Elimina l\'allenamento effettuato</string>
    <string name="inizia">INIZIA</string>
    <string name="_10">10</string>
    <string name="tempo_totale">Tempo totale</string>
    <string name="pronto_ad_inziare">Pronto ad inziare</string>
    <string name="allenamento_di_resistenza">ALLENAMENTO DI RESISTENZA</string>
    <string name="allenamento_di_forza">ALLENAMENTO DI FORZA</string>
    <string name="mmmm">mmmm</string>
    <string name="_1000">1000</string>
    <string name="i_tuoi_totali">I TUOI TOTALI</string>
    <string name="la_tua_settimana">LA TUA SETTIMANA</string>
    <string name="d">D</string>
    <string name="s">S</string>
    <string name="v">V</string>
    <string name="g">G</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="riga1Report">riga1</string>
    <string name="riga2report">riga2</string>
    <string name="reportTitle">Mese</string>
    <string name="teacher">Teacher</string>
    <string name="course">Course</string>
    <string name="modifica">Modifica</string>
    <string name="elimina">Elimina</string>
    <string name="save1">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="ok">OK</string>
    <string name="endur">- 2 minuti riposo</string>
    <string name="endu3m">Almeno 15–20 minuti di attività a scelta tra le seguenti:</string>
    <string name="enduH">- 4 minuti riscaldamento</string>
    <string name="endu8hh">- 4 minuti cooldown</string>
    <string name="informativa_sulla_privacy">
        <a href="http://rehapp.it">Informativa sulla Privacy</a>
    </string>
    <string name="sistemi_funzionali">Sistemi funzionali</string>
</resources>