<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_foreground"
        android:title="@string/menu_home"
        android:enabled="true"/>
    <item android:id="@+id/navigation_calendar"
        android:title="@string/menu_calendar"
        android:icon="@drawable/ic_calendar_foreground"
        android:enabled="true"/>
    <item android:id="@+id/navigation_report"
        android:title="@string/menu_report"
        android:icon="@drawable/ic_report_foreground"
        android:enabled="true"/>
    <item android:id="@+id/navigation_notify"
        android:title="@string/menu_notify"
        android:icon="@drawable/ic_report_foreground"
        android:enabled="true"/>
</menu>